<resources>
    <string name="app_name">Iti Pix</string>
    <!-- Strings ActivityConfirmation Layout-->
    <string name="title_toolbar_activity_confirmation">confirmação</string>
    <!-- Strings CardViewDados Layout -->
    <string name="value">R$ <b>1,00</b> via Pix</string>
    <string name="name_people">para <b>MARCELO SOUZA</b></string>
    <string name="dados_pix">ITAÚ UNIBANCO S.A. - chave PIX - +5512996259393 -</string>
    <string name="cpf">CPF ***.468.208-**</string>
    <string name="description_logo_user">Foto do usuário</string>
    <!-- Strings BodyConfirmation Layout -->
    <string name="type_payment"><b>pagar com</b></string>
    <string name="change_payment"><b>mudar</b></string>
    <string name="balance_iti">saldo iti: R$ 1,00</string>
    <string name="send_message"><b>envie uma mensagem</b></string>
    <string name="read_message"><b>digitar</b></string>
    <string name="text_message">use este espaço para mandar um recado</string>
    <string name="text_contact"><b>salvar contato</b></string>
    <string name="btn_payment">pagar</string>
    <string name="btn_cancel_payment">cancelar pagamento</string>
    <!-- Strings Pix Layout-->
    <string name="title_toolbar_pix">pix</string>
    <string name="text_body_pix">pague e receba na mesma\nhora sem nenhum custo ;)</string>
    <string name="title_card_view_transfer"><b>transferir</b></string>
    <string name="title_card_view_receive"><b>receber</b></string>
    <string name="title_card_view_payment"><b>pagar</b></string>
    <string name="title_manage_pix"><b>gerenciar Pix</b></string>
    <string name="title_mykeys_pix"><b>minhas chaves</b></string>
    <string name="title_extract_pix"><b>extrato / devoluções</b></string>
    <string name="title_help_pix"><b>dúvidas e ajuda</b></string>
    <string name="title_limit_pix"><b>meus limites Pix</b></string>
    <!-- Strings Descriptions -->
    <string name="text_description_my_keys">Acessar minhas chaves Pix</string>
    <string name="text_description_my_extract">Acessar meus extratos e devoluções do Pix</string>
    <string name="text_description_help">Acessar ajuda e dúvidas sobre o Pix</string>
    <string name="text_description_limits">Acessar meus límites do Pix</string>
</resources>