<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDadosPaymentBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:padding="@dimen/padding_body_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/round_money_24" />

        <TextView
            android:id="@+id/textViewTypePayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:focusable="false"
            android:text="@string/type_payment"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/imageViewMoney"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewChangePayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/change_payment"
            android:textColor="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:focusable="false"
            android:text="@string/balance_iti"
            android:textColor="@color/grey"
            app:layout_constraintStart_toEndOf="@+id/imageViewMoney"
            app:layout_constraintTop_toBottomOf="@+id/textViewTypePayment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDadosMessageBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:focusable="true"
        android:padding="@dimen/padding_body_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutDadosPaymentBody">

        <ImageView
            android:id="@+id/imageViewMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/message_24" />

        <TextView
            android:id="@+id/textViewSendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:focusable="false"
            android:text="@string/send_message"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/imageViewMessage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewReadMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/read_message"
            android:textColor="@color/colors_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:focusable="false"
            android:text="@string/text_message"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="@+id/imageViewMessage"
            app:layout_constraintTop_toBottomOf="@+id/textViewSendMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>